GC/log/build_2021-11-04_16-45-58/controller/stderr.log
  File "/home/robofei/Downloads/GC/install/controller/lib/python3.8/site-packages/controller/receiver.py", line 6
    class GameStateReceiver(Node)
                                ^
SyntaxError: invalid syntax

